fix travis ci build